run phps to get up to date

--- a/mandelbulber2/formula/ui/jos_kleinian_v4.ui
+++ b/mandelbulber2/formula/ui/jos_kleinian_v4.ui
@@ -2461,7 +2461,7 @@ offset:</string>
 &lt;a href=&quot;This formula contains aux.color and aux.DE&quot;&gt;This formula contains aux.color and aux.DE&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/jos_kleinian_v4 sphInv.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/jos_kleinian_v4 sa1.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/jos_kleinian_v4 sphInv.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/jos_kleinian_v4 sphInv_2.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
